Fix recently const broken InfoBarDelegate.

InfoBarDelegate's infobar() method was recently made const broken
according to the Chromium C++ Dos and Don'ts guidelines (my bad.)

This fix makes InfoBarDelegate const correct again, and now stores a
reference to the WebContents within the InstantAppsInfoBarDelegate so
we don't need to get WebContents from the info bar using infobar().

TBR=pkasting@chromium.org

Bug: 733733
Change-Id: I8fe56be7ddb39d29db2661434348e9a813e55e1c
Reviewed-on: https://chromium-review.googlesource.com/613674
Reviewed-by: David Trainor <dtrainor@chromium.org>
Commit-Queue: Troy Hildebrandt <thildebr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#494489}
Former-commit-id: 39e3e5d18e666ae2f3d0a384ffc12ab273d29b68