chrome/browser/android/instantapps/instant_apps_infobar_delegate.cc
@@ -33,7 +33,9 @@ InstantAppsInfoBarDelegate::InstantAppsInfoBarDelegate(
     content::WebContents* web_contents,
     const jobject jdata,
     const std::string& url)
-    : content::WebContentsObserver(web_contents), url_(url) {
+    : content::WebContentsObserver(web_contents),
+      url_(url),
+      web_contents_(web_contents) {
   JNIEnv* env = base::android::AttachCurrentThread();
   java_delegate_.Reset(Java_InstantAppsInfoBarDelegate_create(env));
   data_.Reset(env, jdata);
@@ -64,9 +66,7 @@ bool InstantAppsInfoBarDelegate::EqualsDelegate(
 
 
 void InstantAppsInfoBarDelegate::InfoBarDismissed() {
-  content::WebContents* web_contents =
-      InfoBarService::WebContentsFromInfoBar(infobar());
-  InstantAppsSettings::RecordInfoBarDismissEvent(web_contents, url_);
+  InstantAppsSettings::RecordInfoBarDismissEvent(web_contents_, url_);
   base::RecordAction(base::UserMetricsAction(
       "Android.InstantApps.BannerDismissed"));
 }
@@ -80,11 +80,9 @@ void InstantAppsInfoBarDelegate::DidFinishNavigation(
 
 bool InstantAppsInfoBarDelegate::ShouldExpire(
     const NavigationDetails& details) const {
-  content::WebContents* web_contents =
-      InfoBarService::WebContentsFromInfoBar(infobar());
   bool navigation_url_is_launch_url =
-      web_contents != NULL &&
-      web_contents->GetURL().EqualsIgnoringRef(GURL(url_));
+      web_contents_ != NULL &&
+      web_contents_->GetURL().EqualsIgnoringRef(GURL(url_));
   return !navigation_url_is_launch_url &&
          ConfirmInfoBarDelegate::ShouldExpire(details);
 }
